# claudectl

./: .gitignore  .golangci.yml  .goreleaser.yaml  CLAUDE.md  Justfile  README.md  go.mod  go.sum  pyproject.toml  renovate.json
.claude/: plan.md
.claude/plans/: fix-tmp-permission-prompts.md  golang-migration-plan.md  rename-claudectl-to-agentctl.md
.claude/research/: 2025-11-30-homebrew-github-packaging.md  2025-11-30-python-uv-build-distribution.md  2025-12-01-claude-code-bash-chaining-permissions.md  2025-12-01-claude-code-parallel-tool-calls.md  2025-12-01-claude-code-permissions.md  2025-12-01-temporary-directory-best-practices.md  2025-12-05-go-cli-libraries.md  2025-12-05-go-cli-project-layout.md  2025-12-05-go-development-tooling.md  2025-12-06-renovate-package-rules-grouping.md
.github/workflows/: ci.yml  release.yml  verify-formula.yml
Formula/: claudectl.rb
cmd/agentctl/: main.go
hack/: Brewfile
import/: Brewfile  CLAUDE.md  Justfile  settings.json
import/skills/skill-creator/scripts/: package_skill.py  quick_validate.py
internal/cli/: common.go  hook.go  init.go  root.go  status.go  version.go  workspace.go
internal/cli/hook/: context_info.go  hook.go  inject_context.go  notify.go  post_edit.go  post_write.go
internal/cli/workspace/: clean.go  completion.go  create.go  delete.go  list.go  show.go  status.go  workspace.go
internal/config/: settings.go  settings_test.go
internal/context/: context.go
internal/git/: git.go  git_test.go  repo.go  status.go  worktree.go
internal/github/: client.go
internal/hook/: autocommit.go  context.go  notify.go  stdin.go
internal/notify/: notify.go
internal/operations/: context.go  init_ops.go  settings_merge.go  settings_merge_test.go
internal/output/: format.go  output.go  result.go  result_test.go  styles.go
internal/setup/: init.go
internal/templates/: embed.go
internal/templates/templates/: CLAUDE.md
internal/ui/: workspace_picker.go  workspace_table.go
internal/workspace/: errors.go  manager.go  workspace.go
scripts/: generate_formula.py
src/agentctl/: __init__.py
src/agentctl/cli/: main.py
src/agentctl/cli/commands/: hook.py  init.py  workspace.py
src/agentctl/core/: __init__.py  workspaces.py
src/agentctl/operations/: context.py  init_ops.py  mcp_config.py  settings_merge.py  spawn.py  workspace_ops.py
src/claudectl/: __init__.py  domain_git.py
src/claudectl/cli/: main.py  output.py
src/claudectl/cli/commands/: debug.py  hook.py  init.py  workspace.py
src/claudectl/core/: __init__.py  git.py  workspaces.py
src/claudectl/domain/: exceptions.py  git.py  workspace.py
src/claudectl/lib/domain/: git.py  workspace.py
src/claudectl/lib/operations/: context.py  spawn.py  workspace_ops.py
src/claudectl/operations/: context.py  init_ops.py  spawn.py  workspace_ops.py
src/claudectl/templates/: CLAUDE.md  settings.json
src/claudectl/templates/skills/skill-creator/scripts/: init_skill.py
