[project]
name = "claudectl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryan King", email = "ryan@carelesslisper.xyz" }
]
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "gitpython>=3.1.45",
    "typer>=0.20.0",
]

[project.scripts]
claudectl = "claudectl.cli.main:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "python-lsp-server>=1.13.2",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length    = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]

[tool.ruff.format]
line-ending = "lf"

[tool.basedpyright]
typeCheckingMode = "standard"
exclude          = [".venv", "**/__pycache__"]

[tool.pytest.ini_options]
testpaths       = ["tests"]
python_files    = ["test_*.py", "*_test.py"]
python_classes  = ["Test*"]
python_functions = ["test_*"]
addopts         = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=claudectl",
    "--cov-report=term-missing",
    "--cov-report=html",
]
